// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a select input with options 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #fff;
  background-color: #0E141E;
  border: 1px solid #1A212A;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding: 0.5rem;
  padding-left: 1rem;
  padding-right: 2.375rem;
  background-position: right 0.625rem center;
  background-size: 0.625rem;
  border-radius: 100px;
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0:not(:focus):not(:placeholder-shown):invalid {
  border-color: #ff4e64;
}

.emotion-0:invalid,
.emotion-0:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-0:hover:enabled,
.emotion-0:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .emotion-0 {
    width: auto;
  }
}

<select
  className="emotion-0"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders as disabled for default select input 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #fff;
  background-color: #0E141E;
  border: 1px solid #1A212A;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding: 0.5rem;
  padding-left: 1rem;
  padding-right: 2.375rem;
  background-position: right 0.625rem center;
  background-size: 0.625rem;
  border-radius: 100px;
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0:not(:focus):not(:placeholder-shown):invalid {
  border-color: #ff4e64;
}

.emotion-0:invalid,
.emotion-0:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-0:hover:enabled,
.emotion-0:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .emotion-0 {
    width: auto;
  }
}

<select
  className="emotion-0"
  disabled={true}
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders as full-width for default select input 1`] = `
.emotion-0 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #fff;
  background-color: #0E141E;
  border: 1px solid #1A212A;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding: 0.5rem;
  padding-left: 1rem;
  padding-right: 2.375rem;
  background-position: right 0.625rem center;
  background-size: 0.625rem;
  border-radius: 100px;
}

.emotion-0:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0:not(:focus):not(:placeholder-shown):invalid {
  border-color: #ff4e64;
}

.emotion-0:invalid,
.emotion-0:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-0:hover:enabled,
.emotion-0:focus:enabled {
  cursor: pointer;
}

<select
  className="emotion-0"
>
  <option
    value=""
  >
    Select an option
  </option>
  <option
    value="never-gonna"
  >
    Never gonna
  </option>
  <option
    value="give-you-up"
  >
    give you up
  </option>
  <option
    value="let-you-down"
  >
    let you down
  </option>
</select>
`;

exports[`Select renders with label above the input 1`] = `
.emotion-1 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #fff;
  background-color: #0E141E;
  border: 1px solid #1A212A;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding: 0.5rem;
  padding-left: 1rem;
  padding-right: 2.375rem;
  background-position: right 0.625rem center;
  background-size: 0.625rem;
  border-radius: 100px;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:not(:focus):not(:placeholder-shown):invalid {
  border-color: #ff4e64;
}

.emotion-1:invalid,
.emotion-1:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-1:hover:enabled,
.emotion-1:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697a2;
  font-size: 1rem;
}

<label>
  <span
    className="emotion-0"
  >
    Example label
  </span>
  <select
    className="emotion-1"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;

exports[`Select renders with label as a flex layout evenly spaced by default 1`] = `
.emotion-1 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #fff;
  background-color: #0E141E;
  border: 1px solid #1A212A;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding: 0.5rem;
  padding-left: 1rem;
  padding-right: 2.375rem;
  background-position: right 0.625rem center;
  background-size: 0.625rem;
  border-radius: 100px;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:not(:focus):not(:placeholder-shown):invalid {
  border-color: #ff4e64;
}

.emotion-1:invalid,
.emotion-1:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-1:hover:enabled,
.emotion-1:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .emotion-1 {
    width: auto;
  }
}

@media (min-width:31.25em) {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .emotion-2 select,
  .emotion-2 input {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

.emotion-0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697a2;
  font-size: 1rem;
}

@media (min-width:31.25em) {
  .emotion-0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding-right: 1rem;
    margin-bottom: 0;
  }
}

<label
  className="emotion-2"
>
  <span
    className="emotion-0"
  >
    Example label
  </span>
  <select
    className="emotion-1"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;

exports[`Select renders with label as a flex layout with adjusted input size 1`] = `
.emotion-1 {
  width: 100%;
  max-width: 100%;
  padding: 0.875rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  color: #fff;
  background-color: #0E141E;
  border: 1px solid #1A212A;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
  padding-right: 2.625rem;
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 1.25rem;
  color: #8697a2;
  background-image: url("data:image/svg+xml,%3csvg width='1em' height='1em' viewBox='0 0 20 12' xmlns='http://www.w3.org/2000/svg' color='%23586a74' class='css-uk6cul'%3e%3cpath d='M17.377 0L10 7.014 2.624 0 0 2.5 10 12l10-9.502z' fill='currentColor' fill-rule='evenodd'%3e%3c/path%3e%3c/svg%3e");
  padding: 0.5rem;
  padding-left: 1rem;
  padding-right: 2.375rem;
  background-position: right 0.625rem center;
  background-size: 0.625rem;
  border-radius: 100px;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:not(:focus):not(:placeholder-shown):invalid {
  border-color: #ff4e64;
}

.emotion-1:invalid,
.emotion-1:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-1:hover:enabled,
.emotion-1:focus:enabled {
  cursor: pointer;
}

@media (min-width:31.25em) {
  .emotion-1 {
    width: auto;
  }
}

.emotion-0 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697a2;
  font-size: 1rem;
}

@media (min-width:31.25em) {
  .emotion-0 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    padding-right: 1rem;
    margin-bottom: 0;
  }
}

@media (min-width:31.25em) {
  .emotion-2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .emotion-2 select,
  .emotion-2 input {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

<label
  className="emotion-2"
>
  <span
    className="emotion-0"
  >
    Example label
  </span>
  <select
    className="emotion-1"
  >
    <option
      value=""
    >
      Select an option
    </option>
    <option
      value="never-gonna"
    >
      Never gonna
    </option>
    <option
      value="give-you-up"
    >
      give you up
    </option>
    <option
      value="let-you-down"
    >
      let you down
    </option>
  </select>
</label>
`;
